cabal-version:      3.0
name:               liquidity-bridge
version:            0.1
synopsis:           TODO
description:        TODO
homepage:
  https://github.com/mlabs-haskell/CardStarter-LiquidityBridge

bug-reports:
  https://github.com/mlabs-haskell/CardStarter-LiquidityBridge

license:
license-file:
author:             MLabs
maintainer:         TODO
copyright:          TODO
category:           TODO
build-type:         Simple
tested-with:        GHC ==9.2.1
extra-source-files: README.md

source-repository head
  type:     git
  location:
    https://github.com/mlabs-haskell/CardStarter-LiquidityBridge

-- Common sections

common common-lang
  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns -Wno-unused-do-bind
    -Wno-partial-type-signatures -Wmissing-export-lists -Werror
    -Wincomplete-record-updates -Wmissing-deriving-strategies
    -Wno-name-shadowing -Wunused-foralls -fprint-explicit-foralls
    -fprint-explicit-kinds

  build-depends:      base >=4.14
  default-extensions:
    NoStarIsType
    BangPatterns
    BinaryLiterals
    ConstrainedClassMethods
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DoAndIfThenElse
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    ForeignFunctionInterface
    GADTSyntax
    GeneralisedNewtypeDeriving
    HexFloatLiterals
    ImplicitPrelude
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MonomorphismRestriction
    MultiParamTypeClasses
    NamedFieldPuns
    NamedWildCards
    NumericUnderscores
    OverloadedStrings
    PartialTypeSignatures
    PatternGuards
    PolyKinds
    PostfixOperators
    RankNTypes
    RelaxedPolyRec
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TraditionalRecordSyntax
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
    ViewPatterns
    QualifiedDo

  default-language:   Haskell2010

library
  import:          common-lang
  exposed-modules: LiquidityBridge
  build-depends:   plutarch
  hs-source-dirs:  src

test-suite liquidity-bridge-test
  import:         common-lang
  type:           exitcode-stdio-1.0
  main-is:        Spec.hs
  build-depends:
    , liquidity-bridge
    , plutarch
    , QuickCheck
    , quickcheck-instances
    , tasty
    , tasty-quickcheck

  hs-source-dirs: test
