cabal-version:      3.0
name:               plutarch-examples
version:            0.1
synopsis:           TODO
description:        TODO
homepage:
  https://github.com/V0ldek/plutarch-examples.git

bug-reports:
  https://github.com/V0ldek/plutarch-examples.git

license:
license-file:
author:             MLabs
maintainer:         TODO
copyright:          TODO
category:           TODO
build-type:         Simple
tested-with:        GHC ==9.2.1
extra-source-files: README.md

source-repository head
  type:     git
  location:
    https://github.com/V0ldek/plutarch-examples.git

-- Common sections

common common-lang
  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns -Wno-unused-do-bind
    -Wno-partial-type-signatures -Wmissing-export-lists -Werror
    -Wincomplete-record-updates -Wmissing-deriving-strategies
    -Wno-name-shadowing -Wunused-foralls -fprint-explicit-foralls
    -fprint-explicit-kinds

  build-depends:      base >=4.14
  default-extensions:
    NoStarIsType
    BangPatterns
    BinaryLiterals
    ConstrainedClassMethods
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DoAndIfThenElse
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    ForeignFunctionInterface
    GADTSyntax
    GeneralisedNewtypeDeriving
    HexFloatLiterals
    ImplicitPrelude
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MonomorphismRestriction
    MultiParamTypeClasses
    NamedFieldPuns
    NamedWildCards
    NumericUnderscores
    OverloadedStrings
    PartialTypeSignatures
    PatternGuards
    PolyKinds
    PostfixOperators
    RankNTypes
    RelaxedPolyRec
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TraditionalRecordSyntax
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
    ViewPatterns
    QualifiedDo

  default-language:   Haskell2010

library
  import:          common-lang
  exposed-modules: PlutarchExamples
  build-depends:   plutarch
  hs-source-dirs:  src

test-suite plutarch-examples-test
  import:         common-lang
  type:           exitcode-stdio-1.0
  main-is:        Spec.hs
  build-depends:
    , plutarch-examples
    , plutarch
    , QuickCheck
    , quickcheck-instances
    , tasty
    , tasty-quickcheck

  hs-source-dirs: test
